# llvm-windows-build

./: README.md
.github/workflows/: release.yml
pass/: CMakeLists.txt  Hello.cpp
